Fix spacing on flash on login page

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -285,7 +285,7 @@ strong {
 
 #flash .flash {
   padding: 10px 20px;
-  margin-top: 15px;
+  margin-top: 20px;
   margin-bottom: 15px;
 }
 
